Add Linux support and release build
